# sparse-to-dense-ros

./: CMakeLists.txt  batch_runner.sh  commands.txt  datasets.txt  get_datasets.sh  package.xml  parallel_runner.sh  requirements.txt  setup.py
cfg/: SparseToDense.cfg
dev/: eval_samples.py  results_overview.csv  results_overview_latest.csv  sparse_samples.npy  target_samples.npy
dev/paper/: evo.ipynb  scale_evaluate.ipynb  scale_plot.py
dev/scale/: Evaluate trajectory.ipynb  filter_orb.ipynb  scale_optimize.py
dev/scale/room1/: KeyFrameTrajectory.txt  est_points.npy  n_depths.npy  sparse_points.npy
dev/scale/room2/: KeyFrameTrajectory.txt  est_points.npy  n_depths.npy  sparse_points.npy  targ_points.npy
dev/scale/room2_uar0/: KeyFrameTrajectory.txt  est_points.npy  n_depths.npy  sparse_points.npy  targ_points.npy
dev/scale/room2_varscale/: KeyFrameTrajectory.txt  est_points.npy  n_depths.npy  sparse_points.npy  targ_points.npy
dev/scale/room2_wdepth/: KeyFrameTrajectory.txt  est_points.npy  n_depths.npy  sparse_points.npy  targ_points.npy
dev/scale/room3/: KeyFrameTrajectory.txt  est_points.npy  n_depths.npy  sparse_points.npy  targ_points.npy
launch/: sparse_to_dense.launch
msg/: Result.msg  SampleMetrics.msg
rviz/: sparse-to-dense.rviz
sparse_to_dense/: main.py  metrics.py  models.py  utils.py
sparse_to_dense/dataloaders/: dataloader.py  dense_to_sparse.py  kitti_dataloader.py  nyu_dataloader.py  tof_dataloader.py  transforms.py  tum_dataloader.py
sparse_to_dense/ros/: frameSaver.py  rosNode.py  sampleMetricsTracker.py  utils.py
(+48 files in other folders)
